# sc.whitelist-payouts

./: .gitignore  Cargo.toml  README.md
scripts/: build.sh
src/: lib.rs
tests/sim/: main.rs  utils.rs
tests/sim/external_wasm/: smart_whitelist.wasm
wasm/: whitelist_payouts.wasm
